test/interpreter/errors/include_truncated1.cc
#inclu
[[err]]---------------------------------------------
interpreter/errors/include_truncated1.cc[1:6]: Macro '#inclu' desconocida.
